text overflow and links fixed

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,7 +5,11 @@ html {
 }
 body {
   overflow-x: hidden;
+  overflow-y: auto;
   max-height: 100vh;
+}
+body.hide-overflow {
+  overflow-y: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -306,9 +310,19 @@ p{
 }
 
 .item-description {
-  padding-top: 10px;
+  padding: 10px 0 0;
   font-size: 1vw;
-
+  overflow: hidden;
+  position: relative;;
+}
+.item-description:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 3em;
+  content: '';
+  background: linear-gradient(rgba(255,255,255,0),rgba(255,255,255,1));
 }
 
 .item-longDescription {
@@ -385,8 +399,9 @@ ul.card-list {
   background-color: #ffff;
   color: black;
   transform: rotateY(180deg);
-  padding: 30px 30px;
-  box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
+  padding: 15px;
+  box-shadow: 0 0 20px rgba(0,0,0,0.1);
+  border-radius: 5px;
 }
 
 .template {
